--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,42 @@
+  /* font-size: 100%; */
 body {
+  /* font-size: 16; */
   background-color: DarkCyan;
   color: Gold;
   font-family: Big Shoulders Stencil Display, Californian FB, Arial;
+  font-size: 14px;
 }
 h1 {
   color: LimeGreen;
   font-family: Arial;
+  font-size: 36px;
+  font-weight: bold;
+  text-align: left;
+}
+header h1 {
+  text-align: center;
+}
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+}
+h3 {
+  font-size: 18px;
+}
+h1, h2, h3 {
+  font-weight: bold;
+  font-style: italic;
+}
+p {
+  line-height: 2;
+}
+section li a {
+  color: red;
+}
+a: {
+  color: red;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
 }
