--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body {
   color: Gold;
   font-family: Big Shoulders Stencil Display, Californian FB, Arial;
   font-size: 14px;
+  margin: 10px 20px 10px;
+}
+* {
+  font-size: 100%;
+  margin: 0;
+  line-height: 1;
+  box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 h1 {
   color: LimeGreen;
@@ -12,6 +20,8 @@ h1 {
   font-size: 36px;
   font-weight: bold;
   text-align: left;
+  margin: 30px 0;
+  border-bottom: 1px solid black;
 }
 header h1 {
   text-align: center;
@@ -26,9 +36,11 @@ h3 {
 h1, h2, h3 {
   font-weight: bold;
   font-style: italic;
+  margin-bottom: 20px;
 }
 p {
   line-height: 2;
+  margin: 15px 0;
 }
 section li a {
   color: red;
@@ -39,4 +51,38 @@ a: {
 }
 a:hover {
   color: red;
+}
+p {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  margin-right: 30px;
+  margin-left: 0;
+}
+ul, ol {
+  margin: 15px 0;
+}
+header,
+section,
+footer {
+  padding: 30px;
+}
+section {
+  border: 1px dashed red;
+  background-color: white;
+  margin: 30px;
+  padding: 30px;
+  width: 50%;
+  height: 50%;
+}
+header {
+  border-bottom: 5px solid grey;
+}
+img {
+  /* width: 400px; */
+  height: 300px;
+}
+.title {
+  font-size: 48px;
+  text-decoration: underline;
+  color: pink;
 }
