--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 body {
   /* font-size: 16; */
   /* background-color: DarkCyan; */
-  color: Gold;
-  font-family: Big Shoulders Stencil Display, Californian FB, Arial;
+  color: black;
+  font-family: Californian FB, Arial;
   font-size: 14px;
   margin: 10px 20px 10px;
   background-image: url(images/double-bubble-dark.png);
@@ -18,11 +18,11 @@ body {
 }
 h1 {
   color: LimeGreen;
-  font-family: Arial;
+  font-family: Big Shoulders Stencil Display, Arial;
   font-size: 36px;
   font-weight: bold;
-  text-align: left;
-  margin: 30px 0;
+  text-align: center;
+  margin: 15px 0;
   border-bottom: 1px solid black;
 }
 header h1 {
@@ -45,14 +45,17 @@ p {
   margin: 15px 0;
 }
 section li a {
-  color: red;
+  color: Black;
 }
-a: {
-  color: red;
+section li a:hover {
+  color: LimeGreen
+}
+a {
+  color: black;
   text-decoration: none;
 }
 a:hover {
-  color: red;
+  color: Lime-Green;
 }
 p {
   margin-top: 10px;
@@ -69,12 +72,12 @@ footer {
   padding: 30px;
 }
 section {
-  border: 1px dashed red;
+  border: 5px Solid LimeGreen;
   background-color: white;
   margin: 30px;
   padding: 30px;
-  width: 50%;
-  height: 50%;
+  width: 1000;
+  height: 300;
 }
 header {
   border-bottom: 5px solid grey;
@@ -86,7 +89,7 @@ img {
 .title {
   font-size: 48px;
   text-decoration: underline;
-  color: pink;
+  /* color: pink; */
 }
 .container {
   max-width: 1000px;
@@ -97,4 +100,10 @@ img {
   background-image: url(images/pexels-engin-akyurt-2347380.jpg);
   background-size: cover;
   background-position: center;
+}
+li {
+  padding: 5px;
+}
+footer p {
+  color: white;
 }
