--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   /* background-color: DarkCyan; */
   color: black;
   font-family: Californian FB, Arial;
-  font-size: 14px;
+  font-size: 18px;
   margin: 10px 20px 10px;
   background-image: url(images/double-bubble-dark.png);
   /* background-repeat: repeat;  */
@@ -19,11 +19,11 @@ body {
 h1 {
   color: LimeGreen;
   font-family: Big Shoulders Stencil Display, Arial;
-  font-size: 36px;
+  font-size: 42px;
   font-weight: bold;
   text-align: center;
   margin: 15px 0;
-  border-bottom: 1px solid black;
+  border-bottom: 5px solid LimeGreen;
 }
 header h1 {
   text-align: center;
